fix spacing

--- a/src/scss/material-overides.scss
+++ b/src/scss/material-overides.scss
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   width: 100% !important;
-  margin-bottom: 10px !important;
+  margin-bottom: 5px !important;
   ;
 }
 
